tests/tests/ui/embed_newtype_missing_struct_auto.stderr
error[E0277]: Toasty cannot automatically set values for type `UserId`
  --> tests/ui/embed_newtype_missing_struct_auto.rs:12:9
   |
12 |     id: UserId,
   |         ^^^^^^ Toasty cannot automatically set values for this field
   |
help: the trait `Auto` is not implemented for `UserId`
  --> tests/ui/embed_newtype_missing_struct_auto.rs:6:1
   |
 6 | struct UserId(uuid::Uuid);
   | ^^^^^^^^^^^^^
   = note: Add #[auto] to the field. For an embedded newtype, also add #[auto] to the struct so the strategy is proxied from its inner type.
   = help: the following other types implement trait `Auto`:
             i16
             i32
             i64
             i8
             isize
             u16
             u32
             u64
           and $N others
